# depin-ai-demo

./: .gitignore  Cargo.toml  README.md  project.json  test_data.csv  wsproject.json
core/src/: lib.rs
gen_model/: .gitignore  Cargo.toml  README.md
gen_model/data/: run_walk.csv
gen_model/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
src/: lib.rs  main.rs
