[package]
name = "dewi-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
dewi-demo-methods = { path = "methods" }
risc0-zkvm = {version = "0.21.0", path = "../../risc0/risc0/zkvm" }
dewi-core = { path = "./core"}
bytemuck = "1.14.1"
chrono = "0.4.19"
rand = "0.8.4"
csv = "1.1.6"
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0.113"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
