[package]
name = "runner_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smartcore = { version = "0.3.2", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
csv = "1.1"
serde_derive = "1.0"
bincode = "1.3.1"
hex = "0.4.3"



